lab8 tema2 (worker) finalizata

--- a/continut/acasa.html
+++ b/continut/acasa.html
@@ -3,32 +3,43 @@
   <div id="section5box">
 
     <div class="section5box1">
-        <div id="section5box1a">
+        <div id="section5box1a" class="section5boxItem" onclick="schimbaContinut('inregistreaza')">
             <h3>INREGISTRARE</h3>
             <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
         </div>
-        <div id="section5box1b">
+        <div id="section5box1b" class="section5boxItem" onclick="schimbaContinut('video')">
             <h3>VIDEO</h3>
             <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
         </div>
-        <div id="section5box1c">
+        <div id="section5box1c" class="section5boxItem" onclick="schimbaContinut('despre')">
             <h3>DESPRE</h3>
             <p>Penatibus nibh inceptos potenti curae nibh varius eros lacus. Eros semper a magnis consectetur ante ante. Class vitae nibh dictumst nunc quam pulvinar est. Risus donec blandit.</p>
         </div>
     </div>
 
     <div class="section5box2">
-        <div id="section5box2a">
+        <div id="section5box2a" class="section5boxItem" onclick="schimbaContinut('desen')">
             <h3>DESEN</h3>
             <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
         </div>
-        <div id="section5box2b">
+        <div id="section5box2b" class="section5boxItem" onclick="schimbaContinut('invat')">
             <h3>INVAT</h3>
             <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
         </div>
-        <div id="section5box2c">
+        <div id="section5box2c" class="section5boxItem" onclick="schimbaContinut('persoane')">
             <h3>PERSOANE</h3>
             <p>Penatibus nibh inceptos potenti curae nibh varius eros lacus. Eros semper a magnis consectetur ante ante. Class vitae nibh dictumst nunc quam pulvinar est. Risus donec blandit.</p>
+        </div>
+    </div>
+
+    <div class="section5box3">
+        <div id="section5box3a" class="section5boxItem" onclick="schimbaContinut('verifica')">
+            <h3>VERIFICA</h3>
+            <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+        </div>
+        <div id="section5box3b" class="section5boxItem" onclick="schimbaContinut('cumparaturi')">
+            <h3>CUMPARATURI</h3>
+            <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
         </div>
     </div>
 
