--- a/continut/cumparaturi.html
+++ b/continut/cumparaturi.html
@@ -1,4 +1,5 @@
 <div id="sectionCumparaturi">
+    <h3>Coș de cumpărături</h3>
     <form id="formCumparaturi">
         <div id="formCumparaturiProductName" class="formCumparaturiItem">
             <label for="productName">Denumire produs:</label>
