--- a/continut/index.html
+++ b/continut/index.html
@@ -10,16 +10,16 @@
 
     <body onload="schimbaContinut('acasa')">
         <div class="navbar">
-            <a href="#" id="logo"> <img src="imagini/logo.jpg" alt="logo"></a>
-            <a href="#" onclick="schimbaContinut('acasa')">ACASA</a> 
-            <a href="#" onclick="schimbaContinut('inregistreaza', 'js/inregistreaza.js', 'initFormInregistrare')">INREGISTRARE</a>
-            <a href="#" onclick="schimbaContinut('video')">VIDEO</a> 
-            <a href="#" onclick="schimbaContinut('despre')">DESPRE</a> 
-            <a href="#" onclick="schimbaContinut('desen')">DESEN</a>
-            <a href="#" onclick="schimbaContinut('invat', 'js/script.js', 'actualizareSectiuni')">INVAT</a>
-            <a href="#" onclick="schimbaContinut('persoane', 'js/persoane.js', 'incarcaPersoane')">PERSOANE</a>
-            <a href="#" onclick="schimbaContinut('verifica', 'js/verifica.js', 'verificaUtilizator')">VERIFICA</a>
-            <a href="#" onclick="schimbaContinut('cumparaturi', 'js/cumparaturi.js', 'initCumparaturi')">CUMPARATURI</a>
+            <a href="#" id="logo"> <img src="imagini/logo.jpg" alt="logo" class="navbarItem"></a>
+            <a href="#" onclick="schimbaContinut('acasa')" class="navbarItem">ACASA</a> 
+            <a href="#" onclick="schimbaContinut('inregistreaza', 'js/inregistreaza.js', 'initFormInregistrare')" class="navbarItem">INREGISTRARE</a>
+            <a href="#" onclick="schimbaContinut('video')" class="navbarItem">VIDEO</a> 
+            <a href="#" onclick="schimbaContinut('despre')" class="navbarItem">DESPRE</a> 
+            <a href="#" onclick="schimbaContinut('desen')" class="navbarItem">DESEN</a>
+            <a href="#" onclick="schimbaContinut('invat', 'js/script.js', 'actualizareSectiuni')" class="navbarItem">INVAT</a>
+            <a href="#" onclick="schimbaContinut('persoane', 'js/persoane.js', 'incarcaPersoane')" class="navbarItem">PERSOANE</a>
+            <a href="#" onclick="schimbaContinut('verifica', 'js/verifica.js', 'verificaUtilizator')" class="navbarItem">VERIFICA</a>
+            <a href="#" onclick="schimbaContinut('cumparaturi', 'js/cumparaturi.js', 'initCumparaturi')" class="navbarItem">CUMPARATURI</a>
 
         </div>
 
@@ -30,7 +30,7 @@
             </div>
 
             <div id="header2">
-                <img src="imagini/psihologia_copilului.png" alt="imagineHeader" width="300" height="300" id="imagineHeader">
+                <img src="imagini/header.png" alt="imagineHeader" width="300" height="300" id="imagineHeader">
             </div>
         </div>
 
