acasa.html actualizat + video.html

--- a/continut/acasa.html
+++ b/continut/acasa.html
@@ -1,45 +1,51 @@
 <div id="section5">
-  <h3>What you need now is <i>ease</i>. I’m here to help you <i>simplify</i> the process as you begin your journey.</h3>
+  <h3>Continutul site-ului</h3>
   <div id="section5box">
 
     <div class="section5box1">
         <div id="section5box1a" class="section5boxItem" onclick="schimbaContinut('inregistreaza')">
             <h3>INREGISTRARE</h3>
-            <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+            <p>Completează formularul pentru a crea un cont nou. Vei introduce informații generale și personale, precum numele, emailul, preferințe și alte detalii utile pentru personalizarea experienței tale.</p>
         </div>
         <div id="section5box1b" class="section5boxItem" onclick="schimbaContinut('video')">
             <h3>VIDEO</h3>
-            <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
+            <p>Explorează o colecție de materiale video educative despre traume, atașament, vindecare emoțională și dezvoltare personală. Informații prezentate vizual, accesibile și captivante.</p>
         </div>
         <div id="section5box1c" class="section5boxItem" onclick="schimbaContinut('despre')">
             <h3>DESPRE</h3>
-            <p>Penatibus nibh inceptos potenti curae nibh varius eros lacus. Eros semper a magnis consectetur ante ante. Class vitae nibh dictumst nunc quam pulvinar est. Risus donec blandit.</p>
+            <p> In pagina „Despre” vei descoperi cum comportamentele parentale, traumele timpurii și stilurile de atașament influențează dezvoltarea emoțională a copilului și modul în care acestea se reflectă mai târziu în relații, încredere și sănătatea psihică.
+            <br> Te invităm să afli mai multe despre tipurile de traume, impactul lor și cum poți începe un proces de înțelegere și vindecare. </p>       
         </div>
     </div>
 
     <div class="section5box2">
         <div id="section5box2a" class="section5boxItem" onclick="schimbaContinut('desen')">
             <h3>DESEN</h3>
-            <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+            <p> Această pagină ilustrează vizual 5 comportamente frecvente în familie care, deși par normale, ascund disfuncționalități emoționale. Animațiile și simbolurile scot în evidență tensiunea tăcută din spatele aparentei armonii. </p>
         </div>
         <div id="section5box2b" class="section5boxItem" onclick="schimbaContinut('invat')">
             <h3>INVAT</h3>
-            <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
+            <p>Această pagină interactivă include o bară laterală de navigare și mai multe secțiuni funcționale:
+                <br> - Informații despre sesiune: Afișează data, ora, browserul, sistemul de operare și locația curentă.
+                <br> - Canvas pentru desen: Permite utilizatorului să deseneze dreptunghiuri colorate prin selectarea culorii conturului și a umplerii.
+                <br> - Tabel dinamic: Utilizatorul poate adăuga rânduri și coloane în tabel, alegând poziția și culoarea.</p>
         </div>
         <div id="section5box2c" class="section5boxItem" onclick="schimbaContinut('persoane')">
             <h3>PERSOANE</h3>
-            <p>Penatibus nibh inceptos potenti curae nibh varius eros lacus. Eros semper a magnis consectetur ante ante. Class vitae nibh dictumst nunc quam pulvinar est. Risus donec blandit.</p>
+            <p>Această pagină afișează o listă de terapeuți într-un tabel generat dintr-un fișier XML. Inițial, utilizatorul vede un mesaj de încărcare, iar ulterior datele sunt afișate dinamic.</p>
         </div>
     </div>
 
     <div class="section5box3">
         <div id="section5box3a" class="section5boxItem" onclick="schimbaContinut('verifica')">
             <h3>VERIFICA</h3>
-            <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+            <p> Această pagină conține un formular care verifică dacă un utilizator și o parolă introduse corespund unei persoane deja înregistrate. 
+                <br>Datele sunt verificate în fișierul utilizatori.json, iar rezultatul este afișat imediat, indicând dacă datele sunt corecte sau nu.</p>
         </div>
         <div id="section5box3b" class="section5boxItem" onclick="schimbaContinut('cumparaturi')">
             <h3>CUMPARATURI</h3>
-            <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
+            <p>Această secțiune permite adăugarea de produse într-un coș de cumpărături. Utilizatorul introduce denumirea și cantitatea, iar produsul este salvat local (în localStorage) și afișat într-un tabel. 
+                <br>Fiecare produs primește un ID unic. Adăugarea în tabel se face cu ajutorul unui Web Worker, pentru o interfață mai fluentă.</p>
         </div>
     </div>
 
