--- a/continut/inregistreaza.html
+++ b/continut/inregistreaza.html
@@ -1,48 +1,6 @@
-<!--
-<div id="section6">
-    <div id="section6a">
-        <div class="section6aElements">
-            <div id="section6aE1">
-                <h4>Location</h4>
-                <p>1234 Streetname, Suite 1 Cityname, State 12345</p>
-            </div>
-            <div id="section6aE2">
-                <h4>Contact Info</h4>
-                <p>info@yourwebsitename.com 222-333-4444</p>
-            </div>
-            <div id="section6aE3">
-                <h4>Questions?</h4>
-                <p>Check out the FAQ.</p>
-            </div>
-        </div>
-    </div>
-
-    <div id="section6b">
-        <h3><i>Send a message.</i></h3>
-        <p>Use the button above to schedule a free consultation. For other inquiries, please fill out the form, and I'll get back to you within 48 hours. Thank you!</p>
-    
-        <form id="section6bForm">
-            <label for="firstname">Prenume:</label>
-            <input type="text" id="firstname" name="firstname" />
-
-            <label for="lastname">Nume:</label>
-            <input type="text" id="lastname" name="lastname" /><br>
-
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" /><br>
-
-            <label for="message">Message:</label>
-            <textarea id="message"></textarea><br>
-            
-            <button id="section6bFormButton" type="submit" disabled>Inregistreaza</button><br>
-        </form>
-    </div>
-</div>
-
--->
 <form id="formular" method="POST" action="inregistreaza.html">
 
-    <fieldset>
+    <fieldset id="fieldset1">
         <legend>Informatii generale</legend>
         <label for="username">Nume utilizator:</label>
         <input type="text" id="username" name="username" /><br>
@@ -64,7 +22,7 @@
     </fieldset>
     <br>
 
-    <fieldset>
+    <fieldset id="fieldset2">
         <legend>Informatii personale</legend>
 
         <label for="gender">Sexul:</label>
