--- a/continut/invat.html
+++ b/continut/invat.html
@@ -44,20 +44,39 @@
         </div>
 
         <table id="section10table">
-            <caption> Tabel </caption>
+            <caption>Instrumente și resurse psihologice</caption>
             <tr>
-                <th>Info1</th>
-                <th>Info2</th>
+                <th>Denumire</th>
+                <th>Tip</th>
+                <th>Scop</th>
+                <th>Disponibilitate</th>
             </tr>
             <tr>
-                <td>Data1</td>
-                <td>Data2</td>
+                <td>Scala Beck pentru Depresie</td>
+                <td>Chestionar</td>
+                <td>Evaluare depresie</td>
+                <td>Disponibil</td>
             </tr>
             <tr>
-                <td>Data3</td>
-                <td>Data4</td>
+                <td>Testul MMPI-2</td>
+                <td>Inventar de personalitate</td>
+                <td>Diagnostic clinic</td>
+                <td>Necesită licență</td>
+            </tr>
+            <tr>
+                <td>Ghid de intervenție CBT</td>
+                <td>Manual</td>
+                <td>Psihoterapie cognitiv-comportamentală</td>
+                <td>PDF / Print</td>
+            </tr>
+            <tr>
+                <td>Fișe de autocunoaștere</td>
+                <td>Material suport</td>
+                <td>Dezvoltare personală</td>
+                <td>Gratuit</td>
             </tr>
         </table>
+        
     </div>
 
 </div>
