--- a/continut/persoane.html
+++ b/continut/persoane.html
@@ -4,6 +4,7 @@
     </div>
 
     <div id="section9b">
+        <h3> Terapeuti </h3>
         <table id="section9bTabelPersoane"></table>
     </div>
 </div> 
