--- a/continut/video.html
+++ b/continut/video.html
@@ -5,25 +5,25 @@
       </div>
 
       <div id="section7aVideo2">
-          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+          <iframe src="https://www.youtube.com/embed/23ePqRkOKtg" height="200" width="300"></iframe>
       </div>
 
       <div id="section7aVideo3">
-          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+          <iframe src="https://www.youtube.com/embed/EkVOBhJbMj8" height="200" width="300"></iframe>
       </div>
   </div>
 
   <div id="section7b">
       <div id="section7bVideo1">
-          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+          <iframe src="https://www.youtube.com/embed/inGgPAvP_Es" title="Irina “Supernanny” Petrea. De ce se tem copiii. Unde greșesc părinții. Emoțiile care construiesc." height="200" width="300"></iframe>
       </div>
 
       <div id="section7bVideo2">
-          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+          <iframe src="https://www.youtube.com/embed/1RI0L8JgsxE" height="200" width="300"></iframe>
       </div>
 
       <div id="section7bVideo3">
-          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+          <iframe src="https://www.youtube.com/embed/byiyl04rkVU" height="200" width="300"></iframe>
       </div>
   </div>
 </div>
