--- a/continut/index.html
+++ b/continut/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Invat</title>
        <!-- <link rel="stylesheet" type="text/css" href="css/stil2.css"> -->
-        <link rel="stylesheet" type="text/css" href="css/stil3.css">
+        <link rel="stylesheet" type="text/css" href="css/stil.css">
         <script src="js/script.js"></script>
     </head>
 
