--- a/continut/index.html
+++ b/continut/index.html
@@ -37,7 +37,7 @@
         <div class="main" id="mainContinut"></div>
 
         <div class="footer">
-            © copyright w3schools.com
+            © copyright Site realizat de Stati Andreea
         </div>
         
     </body>
